--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Firstname Lastname - Resume</title>
+<title>Markus Philpott - Resume</title>
 
 <meta name="viewport" content="width=device-width"/>
-<meta name="description" content="The Resume of Firstname Lastname."/>
+<meta name="description" content="The Resume of Markus Philpott."/>
 <meta charset="UTF-8"> 
 
 <link type="text/css" rel="stylesheet" href="style.css">
@@ -23,7 +23,7 @@
 		</div>
 		
 		<div id="name">
-			<h1 class="quickFade delayTwo">Firstname Lastname</h1>
+			<h1 class="quickFade delayTwo">Markus Philpott</h1>
 			<h2 class="quickFade delayThree">Computer Science Major</h2>
 			<h4 class="quickFade delayThree">1 Drexel Dr &middot; New Orleans, Louisiana</h4>
 		</div>
